Closed Bug 1067231 Opened 9 years ago Closed 9 years ago

[Keyboard][Text Selection] Tapping the touch caret should show Paste utility bubble if clipboard is not empty

Categories

(Core :: DOM: Selection, defect, P1)

ARM
Gonk (Firefox OS)
defect

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: Omega, Assigned: mtseng)

References

Details

Attachments

(3 files, 2 obsolete files)

[Steps To Reproduce]
1. In an input, copy a word
2. Tap the input again to show Paste utility bubble
3. Tap Paste to paste the string from clipboard
4. Tap the input again, and make sure the touch caret is visible and Paste utility bubble is invisible
5. Tap the touch caret

[Actual Result]
The Paste utility bubble doesn't show up.

[Expected Result]
The Paste utility bubble should show up.

Device: Flame
OS Version: 2.2.0.0-prerelease
Platform Version: 35.0a1
Build Identifier: 20140908160203
Git Commit Info: 2014-09-13 17:51:21 (0f45989d)
Priority: -- → P1
The root cause of this problem is no selection change event with mouse_up.
Assignee: nobody → mtseng
Attached patch bug1027631 (obsolete) — Splinter Review
Send a chrome only event when touch caret is tapped. So that gaia could show bubble when touch caret is tapped base on this event.
Attachment #8500923 - Flags: review?(roc)
Attached patch gaia-partSplinter Review
Hi, George
This is gaia part for this bug. I need your help for applying this patch. Thanks
Flags: needinfo?(gduan)
Attachment #8500923 - Flags: review?(roc) → review?(ehsan.akhgari)
Attached file PR to master
Hi Morris,
could I have your feedback on this patch? Thanks.
Attachment #8501625 - Flags: feedback?(mtseng)
Flags: needinfo?(gduan)
Comment on attachment 8501625 [details] [review]
PR to master

Comment in github.
Attachment #8501625 - Flags: feedback?(mtseng) → feedback-
Attachment #8500923 - Flags: review?(ehsan.akhgari) → review+
https://hg.mozilla.org/integration/b2g-inbound/rev/5d276cd3759b

I had to fix the bug number in this commit message. Please double-check them in the future beforehand.
Keywords: checkin-needed
Backed out for non-unified bustage. Don't forget to fix the bug number in the commit message while you're at it.
https://hg.mozilla.org/integration/b2g-inbound/rev/fe1a9613e61b

/builds/slave/b2g-in-lx-d-000000000000000000/build/layout/base/TouchCaret.cpp: In member function 'void mozilla::TouchCaret::DispatchTapEvent()':
/builds/slave/b2g-in-lx-d-000000000000000000/build/layout/base/TouchCaret.cpp:869:12: error: 'Event' was not declared in this scope
https://hg.mozilla.org/mozilla-central/rev/5d276cd3759b
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
mcMerge got a bit confused with the backouts, wrong bug #, etc.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: mozilla35 → ---
Attached patch bug1067231 v2 (carry r+: ehsan) (obsolete) — Splinter Review
Sorry about the backout. Re-upload patch with correct commit message.

new try run: https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=d4ab4bf180fe
Attachment #8500923 - Attachment is obsolete: true
https://hg.mozilla.org/mozilla-central/rev/ad33a3d9202c
Status: REOPENED → RESOLVED
Closed: 9 years ago9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.