Bug 1067231 - Send touch caret tap event. r=ehsan